fix navigation-drawer-like main menu z-index issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -570,7 +570,7 @@ input[type="number"] {
     left: 0;
     width: 100%;
     height: auto;
-    z-index: 1;
+    z-index: 10;
     background: #FFF;
     padding: 33px 10px 0;
     height: 100vh;
